<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mini Netflix</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_my_list">My List</string>
    <string name="trending_now">Trending Now</string>
    <string name="popular">Popular Movies</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming Releases</string>
    <string name="search_hint">Search movies, TV shows...</string>
    <string name="no_results">No results found</string>
    <string name="my_list_empty">Your list is empty. Add movies from details page!</string>
    <string name="play">Play</string>
    <string name="info">Info</string>
    <string name="add_to_list">My List</string>
    <string name="remove_from_list">Added</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="similar_movies">More Like This</string>
    <string name="release_date_label">Released: %s</string>
    <string name="rating_label">Rating: %1$.1f/10</string>
</resources>
